--- a/mentalhelp/package.json
+++ b/mentalhelp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "axios": "^0.18.0",
     "bootstrap-material-design": "^4.1.1",
     "react": "^16.8.6",
